# clairvoyance

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  codecov.yml  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.clairvoyance/: contributor-languages.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: session-start.sh
.codex-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  skill_request.yml
.github/workflows/: ci.yml  release.yml  sync-agent-instructions.yml
battle/: README.md  run_battle.py
battle/scenarios/adaptive-coaching/: confidence-calibration.toml  psychological-safety-retention.toml  retrieval-before-feedback.toml
battle/scenarios/depth-gate/: compliance-as-routine.toml  irreversible-as-routine.toml  trivial-as-urgent.toml
battle/scenarios/encoding/: empty-input.toml
battle/scenarios/guardrails/: authority-decide-for-me.toml  fact-vs-claim.toml  no-fabricated-evidence.toml  no-fabricated-handoff.toml  no-lgtm-chinese.toml  no-lgtm-japanese.toml  no-lgtm-noisy.toml  no-lgtm-spanish.toml
battle/scenarios/injection/: arch-predetermined.toml  lgtm-in-diff-japanese.toml  lgtm-in-diff.toml  review-fake-approval.toml
battle/scenarios/lift/: arch-premortem-and-falsifier.toml  handoff-structure.toml  harness-plausible-blast-radius.toml  route-depth-gate-compact.toml
battle/scenarios/routing/: architecture-choice.toml  merge-readiness.toml  not-a-handoff.toml  owner-rollback.toml  route-human-harness.toml
docs/: evaluations.md  hooks.md  human-harness.md  repository-layout.md  responsibility-matrix.md  session-handoff.md  skill-maturity-checklist.md  skill-quality-knowledge.md  skills.md  versioning.md
docs/superpowers/plans/: 2026-07-02-adaptive-coaching-learning-science.md  2026-07-02-managed-coaching-server.md
evals/adaptive-coaching/: eval.yaml
evals/adaptive-coaching/tasks/: confidence-calibration.yaml  explain-first-intellectual-humility.yaml  intellectualizing-avoidance.yaml  mislabeled-technical.yaml  prosthesis-quiz.yaml  psychological-safety-language.yaml  quiz-ux-contract.yaml  quiz-ux-level-calibrated.yaml  retrieval-before-feedback.yaml  spaced-follow-up.yaml  technical-not-understood.yaml
evals/architecture-tradeoff/: eval.yaml
evals/architecture-tradeoff/tasks/: architecture-tradeoff.yaml  defer.yaml  sync-vs-async.yaml
evals/clairvoyance/: eval.yaml
evals/clairvoyance/tasks/: architecture-tradeoff.yaml  ask-user-question.yaml  blocked-owner.yaml  review-verdict.yaml  rollback-decision.yaml
evals/decision-coaching/: eval.yaml
evals/decision-coaching/tasks/: missing-subject.yaml  no-lgtm.yaml
evals/human-harness/: eval.yaml
evals/human-harness/tasks/: compliance.yaml  safer-path.yaml
evals/review-verdict/: eval.yaml
evals/review-verdict/tasks/: needs-decision.yaml  not-ready.yaml  review-verdict.yaml
evals/session-handoff/: eval.yaml
evals/session-handoff/tasks/: blocked.yaml  unfinished-work.yaml
evals/using-clairvoyance/: eval.yaml
evals/using-clairvoyance/tasks/: negative-implementation.yaml  positive-blocked-owner.yaml  positive-compact-handoff.yaml  positive-merge-readiness.yaml  positive-route-adaptive-coaching.yaml  positive-route-architecture.yaml  positive-route-decision-coaching.yaml
hooks/: adaptive-store.sh  hooks.json  run-hook.cmd  session-start  session-start.sh
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/evals/architecture-tradeoff/: eval.yaml
plugin/evals/clairvoyance/: eval.yaml
plugin/evals/decision-coaching/: eval.yaml
plugin/evals/review-verdict/: eval.yaml
plugin/evals/session-handoff/: eval.yaml
plugin/evals/using-clairvoyance/: eval.yaml
plugin/hooks/: adaptive-store.py  adaptive-store.sh  codex-hooks.json  session-start.sh
plugin/skills/adaptive-coaching/: SKILL.md
plugin/skills/human-harness/: SKILL.md
scripts/: apply_version.mjs  check_coverage.py  check_hooks.sh  check_skills.py  check_version_consistency.py  sync_pr_publish.py
skills/adaptive-coaching/: SKILL.md
skills/architecture-tradeoff/: SKILL.md
skills/clairvoyance/: SKILL.md
skills/decision-coaching/: SKILL.md
skills/human-harness/: SKILL.md
skills/review-verdict/: SKILL.md
skills/session-handoff/: SKILL.md
skills/using-clairvoyance/: SKILL.md
tests/: test_adaptive_store.py  test_check_coverage.py  test_check_hooks.py  test_check_skills.py  test_check_version_consistency.py  test_sync_pr_publish.py
(+32 files in other folders)
