# Tooling/test project for the Clairvoyance skill package, managed with uv.
# This is NOT the published plugin: the plugin version lives in
# .claude-plugin/plugin.json (see docs/versioning.md). The version below is a
# fixed placeholder and is intentionally excluded from the version-consistency
# check.
[project]
name = "clairvoyance-dev"
version = "0"
description = "Internal tooling and tests for the Clairvoyance skill package."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv]
# Non-package project: uv manages the environment and dev tools only.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
