# Tooling/test project for the Clairvoyance skill package, managed with uv.
# This is NOT the published plugin: the plugin version lives in
# .claude-plugin/plugin.json (see docs/versioning.md). The version below is a
# fixed placeholder and is intentionally excluded from the version-consistency
# check.
[project]
name = "clairvoyance-dev"
version = "0"
description = "Internal tooling and tests for the Clairvoyance skill package."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Lint gate. Bounded major to avoid silent rule churn on upgrade, mirroring
    # the upstream tvna/claude-md pyproject pin.
    "ruff>=0.7,<0.9",
    # Type gate. 1.x line is stable; cap on 2.x for the same churn reason.
    "mypy>=1.11,<2",
]

[tool.uv]
# Non-package project: uv manages the environment and dev tools only.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
# Lint scope: only the Python we ship (scripts/) and its tests (tests/).
# target-version matches requires-python's lower bound.
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# A narrow, high-signal subset of the upstream tvna/claude-md selection,
# trimmed to the rule families this two-script project actually exercises.
select = [
    "F",    # pyflakes: unused imports, undefined names, redefinitions.
    "E",    # pycodestyle errors: includes E722 bare-except.
    "W",    # pycodestyle warnings: trailing whitespace, mixed line endings.
    "I",    # isort: import ordering and duplicate-import detection.
    "B",    # flake8-bugbear: mutable defaults, raise-from, etc.
    "A",    # flake8-builtins: shadowed builtins.
    "UP",   # pyupgrade: keep modern syntax consistent.
    "SIM",  # flake8-simplify: redundant conditionals.
    "RET",  # flake8-return: explicit, consistent returns.
    "PTH",  # flake8-use-pathlib: prefer Path over os.path (house style).
    "RUF",  # ruff-specific: noqa misuse, ambiguous unicode, etc.
    "S",    # flake8-bandit: subprocess injection, weak crypto, insecure tmp.
]
ignore = [
    # E501: line length is enforced by ruff's own `line-length` setting.
    "E501",
    # SIM108: ternary rewrites hurt readability in branchy validation code.
    "SIM108",
    # RET504: pre-return assignment is kept for readability where used.
    "RET504",
]

[tool.ruff.lint.per-file-ignores]
# The test suite drives the validators through subprocess and asserts on the
# result; these S/B families are intrinsic to a pytest suite, not defects.
#   S101        -- assert is the pytest assertion primitive.
#   S404/S603/S607 -- tests invoke bash/python via subprocess by design.
"tests/*" = ["S101", "S404", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["check_skills", "check_version_consistency"]

[tool.mypy]
# Type gate, mirroring the upstream tvna/claude-md flag set. `python_version`
# matches requires-python's lower bound. `mypy_path` lets the tests resolve the
# flat script modules they import (same layout as pytest's `pythonpath`).
python_version = "3.12"
files = ["scripts", "tests"]
mypy_path = "scripts"
# High-signal, low-churn flags: catch dead suppressions and PEP 484 implicit
# Optional, and forbid bare generics, without a repo-wide annotation pass.
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
pretty = true
show_error_codes = true
